still_attempting_to_fix

--- a/cards/templates/base.html
+++ b/cards/templates/base.html
@@ -28,10 +28,10 @@
 <body class="bg-gray-100">
     <nav class="bg-gray-800 p-4 text-white">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="/" class="text-xl font-bold">Card Creator</a>
+            <a href="/home/" class="text-xl font-bold">Card Creator</a>
             <div class="space-x-4">
                 <a href="/cards/create/" class="hover:text-gray-300">Create Card</a>
-                <a href="/cards/cards/" class="hover:text-gray-300">Card List</a>
+                <a href="/" class="hover:text-gray-300">Card List</a>
                 <span id="user-button"></span>
             </div>
         </div>
